--- a/src/Blazor.Chat/Blazor.Chat.Client/Shared/HeaderNav.razor
+++ b/src/Blazor.Chat/Blazor.Chat.Client/Shared/HeaderNav.razor
@@ -2,7 +2,7 @@
 <header>
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top shadow-sm py-0">
         <a class="navbar-brand" href="#">@AppName</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
