--- a/src/Blazor.Chat/Blazor.Chat.Client/Shared/MainLayout.razor
+++ b/src/Blazor.Chat/Blazor.Chat.Client/Shared/MainLayout.razor
@@ -4,9 +4,9 @@
 
 <AsideNav>
     <AsideItem active="true" text="Início">
-        <AsideLink text="Home" icon="oi oi-home" href="" match="NavLinkMatch.All"></AsideLink>
-        <AsideLink text="Counter" icon="oi oi-plus" href="counter"></AsideLink>
-        <AsideLink text="Fetch data" icon="oi oi-list-rich" href="fetchdata"></AsideLink>
+        <AsideLink text="Home #$" icon="oi oi-home" href="" match="NavLinkMatch.All"></AsideLink>
+        <AsideLink text="Counter ç^~" icon="oi oi-plus" href="counter"></AsideLink>
+        <AsideLink text="Fetch data <>:;.\\//" icon="oi oi-list-rich" href="fetchdata"></AsideLink>
     </AsideItem>
     <AsideItem active="false" text="Cadastros">
         <AsideLink text="Home É" icon="oi oi-home" href="" match="NavLinkMatch.All"></AsideLink>
