--- a/src/Blazor.Chat/Blazor.Chat.Client_old5/Pages/Counter.razor
+++ b/src/Blazor.Chat/Blazor.Chat.Client_old5/Pages/Counter.razor
@@ -4,9 +4,9 @@
 
 <p>Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="@IncrementCount">Click me</button>
+<button class="btn btn-primary" onclick="@IncrementCount">Click me</button>
 
-@code {
+@functions {
     int currentCount = 0;
 
     void IncrementCount()
