--- a/src/Blazor.Chat/Blazor.Chat.Client_old5/Shared/AsideItem.razor
+++ b/src/Blazor.Chat/Blazor.Chat.Client_old5/Shared/AsideItem.razor
@@ -2,15 +2,15 @@
 @inject IJSRuntime js;
 
 <li class="aside-item">
-    <a @onclick="@ToggleCollapse" class="dropdown-toggle">
+    <a onclick="@ToggleCollapse" class="dropdown-toggle">
         @text
     </a>
-    <ul class="list-unstyled collapsible @showCss" style="@maxHeight" @ref="items">
+    <ul class="list-unstyled collapsible @showCss" ref="items" style="max-height=@maxHeight">
         @ChildContent
     </ul>
 </li>
 
-@code {
+@functions {
 
     [Parameter]
     RenderFragment ChildContent { get; set; }
@@ -23,7 +23,6 @@
 
     string showCss => active ? "active show" : null;
     string maxHeight;
-    bool init;
 
     private ElementRef items;
 
@@ -32,7 +31,7 @@
         active = !active;
         if (maxHeight == null)
         {
-            maxHeight = "max-height:" + await js.InvokeAsync<int>("Get", items, "scrollHeight") + "px;";
+            maxHeight = await js.InvokeAsync<string>("Get", items, "scrollHeight");
         }
         else
         {
@@ -43,10 +42,6 @@
 
     protected override async Task OnAfterRenderAsync()
     {
-        if (!init)
-        {
-            init = true;
-            maxHeight = "max-height:" + await js.InvokeAsync<int>("Get", items, "scrollHeight") + "px;";
-        }
+        maxHeight = await js.InvokeAsync<string>("Get", items, "scrollHeight");
     }
 }
