--- a/src/Blazor.Chat/Blazor.Chat.Client/Shared/MainLayout.razor
+++ b/src/Blazor.Chat/Blazor.Chat.Client/Shared/MainLayout.razor
@@ -1,17 +1,17 @@
-@inherits LayoutComponentBase
+ï»¿@inherits LayoutComponentBase
 
 <HeaderNav AppName="Blazor Chat"></HeaderNav>
 
 <AsideNav>
-    <AsideItem active="true" text="Início">
+    <AsideItem active="true" text="InÃ­cio">
         <AsideLink text="Home #$" icon="oi oi-home" href="" match="NavLinkMatch.All"></AsideLink>
-        <AsideLink text="Counter ç^~" icon="oi oi-plus" href="counter"></AsideLink>
+        <AsideLink text="Counter Ã§^~" icon="oi oi-plus" href="counter"></AsideLink>
         <AsideLink text="Fetch data <>:;.\\//" icon="oi oi-list-rich" href="fetchdata"></AsideLink>
     </AsideItem>
     <AsideItem active="false" text="Cadastros">
-        <AsideLink text="Home É" icon="oi oi-home" href="" match="NavLinkMatch.All"></AsideLink>
-        <AsideLink text="Counter É" icon="oi oi-plus" href="counter"></AsideLink>
-        <AsideLink text="Fetch data É" icon="oi oi-list-rich" href="fetchdata"></AsideLink>
+        <AsideLink text="Home Ã‰" icon="oi oi-home" href="" match="NavLinkMatch.All"></AsideLink>
+        <AsideLink text="Counter Ã‰" icon="oi oi-plus" href="counter"></AsideLink>
+        <AsideLink text="Fetch data Ã‰" icon="oi oi-list-rich" href="fetchdata"></AsideLink>
     </AsideItem>
 </AsideNav>
 
