--- a/src/Blazor.Chat/Blazor.Chat.Client/Pages/FetchData.razor
+++ b/src/Blazor.Chat/Blazor.Chat.Client/Pages/FetchData.razor
@@ -1,5 +1,6 @@
 ﻿@page "/fetchdata"
-@inject HttpClient Http
+@using System.Net.Http
+@inject HttpClient http
 
 <h1>Weather forecast</h1>
 
@@ -37,9 +38,9 @@ else
 @code {
     WeatherForecast[] forecasts;
 
-    protected override async Task OnInitAsync()
+    protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        forecasts = await http.GetJsonAsync<WeatherForecast[]>("sample-data/weather.json");
     }
 
     class WeatherForecast
