--- a/src/Blazor.Chat/Blazor.Chat.Client/Shared/AsideNav.razor
+++ b/src/Blazor.Chat/Blazor.Chat.Client/Shared/AsideNav.razor
@@ -10,5 +10,5 @@
 @code {
 
     [Parameter]
-    RenderFragment ChildContent { get; set; }
+    public RenderFragment ChildContent { get; set; }
 }
