--- a/src/Blazor.Chat/Blazor.Chat.Client/Shared/AsideItem.razor
+++ b/src/Blazor.Chat/Blazor.Chat.Client/Shared/AsideItem.razor
@@ -26,7 +26,7 @@
 
     private ElementReference items;
 
-    protected override void OnAfterRender()
+    protected override void OnAfterRender(bool firstRender)
     {
         if (maxHeight == null)
         {
@@ -34,7 +34,7 @@
             if (active)
                 StateHasChanged();
         }
-        base.OnAfterRender();
+        base.OnAfterRender(firstRender);
     }
 
     void ToggleCollapse()
